--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vscode/PythonImportHelper-v2-Completion.json
 monster/manga/management/commands/chapter_json.json
 monster/python/
+logs/pars_py_log.log*
+logs/*.log
